force-app/main/default/objects/BankBalBankTran__c/BankBalBankTran__c.object-meta.xml
<CustomObject>
    <label>Bank+Bank Bal</label>
    <nameField>
        <displayFormat>BTBB-{000000}</displayFormat>
        <label>BANK TRANS+BANK BAL</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank+Bank Bal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>