force-app/main/default/objects/BankBalBankTran__c/fields/AmountPaidLocalForBCBal__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidLocalForBCBal__c</fullName>
    <label>AMOUNT PAID(LOCAL)-FOR B/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>