force-app/main/default/objects/BankBalBankTran__c/fields/AmountPaidUSDForBCBal__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidUSDForBCBal__c</fullName>
    <label>AMOUNT PAID(USD)-FOR B/C BAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>