force-app/main/default/objects/BankBalBankTran__c/fields/AmountReceivedLocalForBCBal__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedLocalForBCBal__c</fullName>
    <label>AMOUNT RECEIVED(LOCAL)-FOR B/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>