force-app/main/default/objects/BankBalBankTran__c/fields/AmountReceivedLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedLocalFormula__c</fullName>
    <formula>BankTransactionID__r.AmountReceivedLocal__c</formula>
    <label>AMOUNT RECEIVED(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>