force-app/main/default/objects/BankBalBankTran__c/fields/AmountReceivedUSDForBCBal__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedUSDForBCBal__c</fullName>
    <label>AMOUNT RECEIVED(USD)-FOR B/C BAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>