force-app/main/default/objects/BankBalBankTran__c/fields/AmountReceivedUSDFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedUSDFormula__c</fullName>
    <formula>BankTransactionID__r.AmountReceivedUSD__c</formula>
    <label>AMOUNT RECEIVED(USD)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>