force-app/main/default/objects/BankBalBankTran__c/fields/BankBalanceID__c.field-meta.xml
<CustomField>
    <fullName>BankBalanceID__c</fullName>
    <label>BANK BALANCE ID</label>
    <referenceTo>BANK_BALANCE__c</referenceTo>
    <relationshipName>BankBalanceID</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>