force-app/main/default/objects/BankBalBankTran__c/fields/BankCashBalanceRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>BankCashBalanceRollupStatus__c</fullName>
    <label>BANK/CASH BALANCE ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>