force-app/main/default/objects/BankBalBankTran__c/fields/BankTransactionID__c.field-meta.xml
<CustomField>
    <fullName>BankTransactionID__c</fullName>
    <label>BANK TRANSACTION ID</label>
    <referenceTo>BankTransaction__c</referenceTo>
    <relationshipName>BankTransactionID</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>